--- a/demopageone/package.json
+++ b/demopageone/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "demopage_one",
+  "name": "demopageone",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -7,7 +7,7 @@
     "@emotion/styled": "^11.11.5",
     "@mui/material": "^5.15.19",
     "@reduxjs/toolkit": "^2.2.5",
-    "@tanstack/react-query": "^5.40.1",
+    "@tanstack/react-query": "^5.44.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -18,6 +18,7 @@
     "axios": "^1.7.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.51.5",
     "react-icons": "^5.2.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.1",
